# grafana-utils

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  Makefile  README.md  README.zh-TW.md  TODO.md  pyproject.toml
python/: pyproject.toml
python/grafana_utils/: __init__.py  __main__.py  access_cli.py  alert_cli.py  alert_sync_workbench.py  auth_staging.py  bundle_preflight_workbench.py  change_cli.py  cli_shared.py  dashboard_cli.py  dashboard_governance_gate.py  dashboard_permission_workbench.py  datasource_cli.py  datasource_contract.py  datasource_diff.py  datasource_secret_provider_workbench.py  datasource_secret_workbench.py  gitops_sync.py  http_transport.py  overview_cli.py  profile_cli.py  profile_config.py  resource_cli.py  roadmap_workbench.py  snapshot_cli.py  status_cli.py  sync_cli.py  sync_preflight_workbench.py  unified_cli.py  yaml_compat.py
python/grafana_utils/access/: common.py  models.py  parser.py  pending_cli_staging.py  workflows.py
python/grafana_utils/alerts/: __init__.py  common.py  provisioning.py
python/grafana_utils/clients/: access_client.py  alert_client.py  dashboard_client.py  datasource_client.py
python/grafana_utils/dashboards/: common.py  diff_workflow.py  export_inventory.py  export_runtime.py  export_workflow.py  folder_path_match.py  folder_support.py  import_runtime.py  import_support.py  import_workflow.py  inspection_dependency_models.py  inspection_dispatch.py  inspection_governance.py  inspection_governance_render.py  inspection_render.py  inspection_report.py  inspection_runtime.py  inspection_summary.py  inspection_workflow.py  listing.py  output_support.py  permission_support.py  progress.py  reference_models.py  screenshot.py  transformer.py  variable_inspection.py
python/grafana_utils/datasource/: __init__.py  catalog.py  live_mutation.py  live_mutation_render.py  live_mutation_render_safe.py  live_mutation_safe.py  parser.py  workflows.py
python/tests/: __init__.py  test_python_access_cli.py  test_python_access_pending_cli_staging.py  test_python_alert_cli.py  test_python_alert_sync_workbench.py  test_python_auth_staging.py  test_python_build_pages_site.py  test_python_bundle_preflight_workbench.py  test_python_check_docs_surface.py  test_python_dashboard_capture_cli.py  test_python_dashboard_cli.py  test_python_dashboard_folder_path_match.py  test_python_dashboard_governance_gate.py  test_python_dashboard_inspection_cli.py  test_python_dashboard_inspection_governance.py  test_python_dashboard_integration_flow.py  test_python_dashboard_permission_workbench.py  test_python_dashboard_reference_models.py  test_python_dashboard_screenshot_helper.py  test_python_dashboard_screenshot_import.py  test_python_dashboard_variable_inspection.py  test_python_datasource_cli.py  test_python_datasource_client.py  test_python_datasource_diff.py  test_python_datasource_live_mutation.py  test_python_datasource_live_mutation_render.py  test_python_datasource_live_mutation_render_safe.py  test_python_datasource_live_mutation_safe.py  test_python_datasource_secret_provider_workbench.py  test_python_datasource_secret_workbench.py  test_python_docgen_command_docs.py  test_python_docgen_entrypoints.py  test_python_docgen_handbook.py  test_python_docgen_landing.py  test_python_docs_command_comments.py  test_python_generate_command_html.py  test_python_generate_manpages.py  test_python_gitops_sync.py  test_python_handbook_structure.py  test_python_inspection_dependency_models.py  (+13 more)
rust/: Cargo.toml  build.rs
rust/src/: access.rs  access_cli_defs.rs  access_org.rs  access_pending_delete.rs  access_render.rs  access_rust_tests.rs  access_service_account.rs  access_team.rs  access_user.rs  alert.rs  alert_cli_defs.rs  alert_client.rs  alert_list.rs  alert_runtime_support.rs  alert_rust_tests.rs  alert_support.rs  alert_sync.rs  bundle_preflight.rs  bundle_preflight_rust_tests.rs  cli.rs  cli_help.rs  cli_help_examples.rs  cli_rust_tests.rs  common.rs  common_rust_tests.rs  dashboard.rs  dashboard_cli_defs.rs  dashboard_export.rs  dashboard_files.rs  dashboard_help.rs  dashboard_import.rs  dashboard_inspect.rs  dashboard_inspect_analyzer_flux.rs  dashboard_inspect_analyzer_loki.rs  dashboard_inspect_analyzer_prometheus.rs  dashboard_inspect_analyzer_sql.rs  dashboard_inspect_governance.rs  dashboard_inspect_render.rs  dashboard_inspect_report.rs  dashboard_inspect_summary.rs  (+58 more)
rust/src/access/: access_cli_runtime.rs  access_cli_rust_tests.rs  access_cli_shared.rs  access_runtime_org_rust_tests.rs  access_service_account_cli.rs  access_service_account_org_rust_tests.rs  access_user_cli.rs  cli_defs.rs  mod.rs  org.rs  org_workflows.rs  pending_delete.rs  pending_delete_service_account.rs  pending_delete_team.rs  render.rs  rust_tests.rs  service_account.rs  service_account_workflows_mutation.rs  service_account_workflows_support.rs  service_account_workflows_sync.rs  team.rs  team_import_export.rs  team_import_export_diff.rs  team_list.rs  user.rs  user_mutation.rs  user_read.rs  user_workflows.rs
rust/src/cli/: completion.rs  dispatch.rs  help_examples.rs  mod.rs  rust_tests.rs
rust/src/cli_help/: routing.rs
rust/src/common/: export_metadata.rs  export_metadata_rust_tests.rs  mod.rs  rust_tests.rs  staged_export_scopes.rs
rust/src/dashboard/: analysis_source.rs  authoring.rs  authoring_rust_tests.rs  browse.rs  browse_external_edit_dialog.rs  browse_input.rs  browse_render.rs  browse_state.rs  browse_support.rs  browse_tui.rs  cli_defs.rs  cli_defs_command.rs  cli_defs_command_export.rs  cli_defs_command_history.rs  cli_defs_command_list.rs  cli_defs_command_live.rs  cli_defs_command_local.rs  cli_defs_inspect.rs  cli_defs_shared.rs  export.rs  (+119 more)
rust/tests/: project_status_tui_rust_tests.rs
(+1468 files in other folders)
