[build-system]
requires = ["setuptools>=59", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grafana-util"
version = "0.2.8"
description = "Grafana dashboard and alerting export/import utilities."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "kenduest" }]
dependencies = [
  "requests>=2.27,<3",
]

[project.optional-dependencies]
http2 = [
  "httpx[http2]>=0.27,<1",
]

[project.scripts]
grafana-util = "grafana_utils.unified_cli:main"

[tool.poetry]
requires-poetry = ">=2.1"

[tool.poetry.group.dev.dependencies]
black = ">=24,<26"
build = ">=1.2,<2"
mypy = ">=1.10,<2"
ruff = ">=0.11,<1"
setuptools = ">=59"
wheel = ">=0.45,<1"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["grafana_utils", "grafana_utils.*"]
