[build-system]
requires = ["setuptools>=59", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grafana-util"
version = "0.10.0"
description = "CLI for reviewing Grafana changes with live inventory, diff, preview, and safe apply workflows."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "kenduest" }]
dependencies = [
  "Pillow>=10,<13",
  "requests>=2.27,<3",
]

[project.optional-dependencies]
http2 = [
  "httpx[http2]>=0.27,<1",
]

[project.scripts]
grafana-util = "grafana_utils.unified_cli:main"

[tool.poetry]
requires-poetry = ">=2.1"
packages = [
  { include = "grafana_utils", from = "." },
]

[tool.poetry.group.dev.dependencies]
black = ">=24,<26"
build = ">=1.2,<2"
mypy = ">=1.10,<2"
ruff = ">=0.11,<1"
setuptools = ">=59"
wheel = ">=0.45,<1"

[tool.setuptools]
include-package-data = false
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["grafana_utils", "grafana_utils.*"]
