[package]
name = "grafana-utils-rust"
version = "0.2.19"
edition = "2021"
license = "Apache-2.0"
description = "Rust rewrite scaffold for Grafana dashboard and alerting utilities."

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
font8x8 = "0.3"
headless_chrome = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "json", "rustls-tls"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
