[package]
name = "grafana-utils-rust"
version = "0.7.1"
edition = "2021"
license = "Apache-2.0"
description = "Rust rewrite scaffold for Grafana dashboard and alerting utilities."

[features]
default = ["tui"]
tui = ["dep:crossterm", "dep:ratatui"]
browser = ["dep:font8x8", "dep:headless_chrome", "dep:image"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", optional = true }
font8x8 = { version = "0.3", optional = true }
headless_chrome = { version = "1", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"], optional = true }
indicatif = "0.17"
aes-gcm-siv = "0.11"
pbkdf2 = "0.12"
rayon = "1.10"
ratatui = { version = "0.29", optional = true }
regex = "1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "json", "rustls-tls"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = "3"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
strip = "symbols"
